--- a/src/App.css
+++ b/src/App.css
@@ -741,4 +741,27 @@ a:active {
   border-top-color: #11213a;
   animation: 1.5s spin infinite linear;
   border-bottom-color: #11213a;
+}
+
+@media (max-width: 767px) {
+  .sliding-puzzle {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .board-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+  }
+  .board-btn > div:not(:last-child) {
+    margin-bottom: 0;
+  }
+  .sliding-puzzle > div {
+    margin-top: 0;
+  }
+  .sliding-puzzle label,
+  .btn-txt {
+    padding: 10px 16px;
+    font-size: 12px;
+  }
 }/*# sourceMappingURL=App.css.map */
